Fixed CoreLocation issues, should prompt user correctly

--- a/LocationApp/LocationApp/Info.plist
+++ b/LocationApp/LocationApp/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>The application uses this information to show you your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
+	<key>NSLocationUsageDescription</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
